[package]
name = "flow_access_api"
version = "0.1.2"
edition = "2024"
build = "build.rs"
authors = ["Demchuk Nazar <nazar.demchvk@gmail.com>"]
repository = "https://github.com/uandere/flow_access_api"
description = "The Rust implementation of the Flow Access API through gRPC client."
license = "MIT OR Apache-2.0"

[dependencies]
futures = "0.3.31"
hex = "0.4.3"
tokio = { version = "1.43.0", features = ["full"] }
tonic = "0.12.3"
prost = "0.13.4"
prost-types = "0.13.4"
sha3 = "0.10"
rlp = "0.6.1"
secp256k1 = "0.30.0"
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
serde_cadence = "0.1.13"
derive_more = { version = "2.0.1", features = ["full"] }
anyhow = "1.0.97"

[build-dependencies]
tonic-build = "0.12.3"
glob = "0.3.2"
